Logica general terminada, metodos de verificacion, cambio por deque y PilaDeCartas Test